// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render a custom component 1`] = `
<header
  className="navbar navbar-expand-md navbar-light bg-light perseids-react-components--navbar"
>
  <span
    className="navbar-brand perseids-react-components--navbar-brand"
    name="test"
  >
    <img
      alt="perseids logo"
      className="perseids-react-components--navbar-logo-img"
      src="perseids-logo-transparent.png"
      title="perseids logo"
    />
  </span>
</header>
`;

exports[`can render a custom logo 1`] = `
<header
  className="navbar navbar-expand-md navbar-light bg-light perseids-react-components--navbar"
>
  <a
    className="navbar-brand perseids-react-components--navbar-brand"
    href="https://www.perseids.org"
  >
    <img
      alt="perseids logo"
      className="perseids-react-components--navbar-logo-img"
      src="some-image.png"
      title="perseids logo"
    />
  </a>
</header>
`;

exports[`can render a different element 1`] = `
<header
  className="navbar navbar-expand-md navbar-light bg-light perseids-react-components--navbar"
>
  <div
    className="navbar-brand perseids-react-components--navbar-brand"
    href="https://www.perseids.org"
  >
    <img
      alt="perseids logo"
      className="perseids-react-components--navbar-logo-img"
      src="perseids-logo-transparent.png"
      title="perseids logo"
    />
  </div>
</header>
`;

exports[`can render children between copyright notice and icons 1`] = `
<header
  className="navbar navbar-expand-md navbar-light bg-light perseids-react-components--navbar"
>
  <a
    className="navbar-brand perseids-react-components--navbar-brand"
    href="https://www.perseids.org"
  >
    <img
      alt="perseids logo"
      className="perseids-react-components--navbar-logo-img"
      src="perseids-logo-transparent.png"
      title="perseids logo"
    />
  </a>
  Header text
</header>
`;

exports[`can render without a logo 1`] = `
<header
  className="navbar navbar-expand-md navbar-light bg-light perseids-react-components--navbar"
>
  <a
    className="navbar-brand perseids-react-components--navbar-brand"
    href="https://www.perseids.org"
  />
</header>
`;

exports[`renders with a link to perseids.org 1`] = `
<header
  className="navbar navbar-expand-md navbar-light bg-light perseids-react-components--navbar"
>
  <a
    className="navbar-brand perseids-react-components--navbar-brand"
    href="https://www.perseids.org"
  >
    <img
      alt="perseids logo"
      className="perseids-react-components--navbar-logo-img"
      src="perseids-logo-transparent.png"
      title="perseids logo"
    />
  </a>
</header>
`;
